temporary cads_pat, waiting for repos to be public

--- a/.github/workflows/build-cads-image.yml
+++ b/.github/workflows/build-cads-image.yml
@@ -67,3 +67,5 @@ jobs:
         file: docker/${{ inputs.image_name }}/Dockerfile
         build-args: |
           MODE=${{ inputs.build_mode }}
+        secret-envs:
+          CADS_PAT=${{ secrets.CADS_PAT }}
