--- a/.github/workflows/build-cads-image.yml
+++ b/.github/workflows/build-cads-image.yml
@@ -68,6 +68,6 @@ jobs:
         build-args: |
           MODE=${{ inputs.build_mode }}
           CADS_PAT=${{ secrets.CADS_PAT }}
-          GITHUB_EMAIL=${{ secrets.GITHUB_EMAIL }}
-          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          GITHUB_USERNAME=${{ secrets.GITHUB_USERNAME }}
+          EMAIL_GITHUB=${{ secrets.EMAIL_GITHUB }}
+          TOKEN_GITHUB=${{ secrets.TOKEN_GITHUB }}
+          USERNAME_GITHUB=${{ secrets.USERNAME_GITHUB }}
