--- a/.github/workflows/build-broker.yml
+++ b/.github/workflows/build-broker.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   build_broker:
     name: Build broker:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
-    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@build-from-versions-file
+    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@main
     with:
       image_name: broker
       deployment_branch: ${{ inputs.deployment_branch }}
