--- a/.github/workflows/build-catalogue-api.yml
+++ b/.github/workflows/build-catalogue-api.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   build_catalogue_api:
     name: Build catalogue-api:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
-    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@build-from-versions-file
+    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@main
     with:
       image_name: catalogue-api
       deployment_branch: ${{ inputs.deployment_branch }}
