--- a/.github/workflows/build-dev-explorer.yml
+++ b/.github/workflows/build-dev-explorer.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   build_dev_explorer:
     name: Build dev-explorer:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
-    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@build-from-versions-file
+    uses: ecmwf-projects/cads-build-farm/.github/workflows/build-cads-image.yml@main
     with:
       image_name: dev-explorer
       deployment_branch: ${{ inputs.deployment_branch }}
