--- a/.github/workflows/dask-mars-builder.yml
+++ b/.github/workflows/dask-mars-builder.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build-docker-image:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
