--- a/.github/workflows/build-cads-image.yml
+++ b/.github/workflows/build-cads-image.yml
@@ -63,9 +63,7 @@ jobs:
       with:
         context: docker
         push: true
-        tags: |
-          ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:${{ inputs.image_tag }}
-          ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:latest
+        tags: ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:${{ inputs.image_tag }}, ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:latest
         file: docker/${{ inputs.image_name }}/Dockerfile
         build-args: |
           MODE=${{ inputs.build_mode }}
