--- a/.github/workflows/build-cads-image.yml
+++ b/.github/workflows/build-cads-image.yml
@@ -58,12 +58,21 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v3
+      with:
+        images: ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}
+        tags: |
+          type=raw,value=${{ inputs.image_tag }},enabled=true
+          type=raw,value=latest,enabled=true
+
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
         context: docker
         push: true
-        tags: ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:${{ inputs.image_tag }}, ${{ secrets.HARBOR_IP }}/cads/${{ inputs.image_name }}:latest
+        tags: ${{ steps.meta.outputs.tags }}
         file: docker/${{ inputs.image_name }}/Dockerfile
         build-args: |
           MODE=${{ inputs.build_mode }}
