--- a/.github/workflows/build-cim.yml
+++ b/.github/workflows/build-cim.yml
@@ -11,6 +11,10 @@ name: Build cim-ui image
 on:
   workflow_dispatch:
     inputs:
+      deployment_branch:
+        description: 'Deployment branch'
+        required: true
+        default: 'main'
       image_tag:
         description: 'Image tag'
         required: true
@@ -54,6 +58,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-cim-api
+        deployment_branch: ${{ inputs.deployment_branch }}
         token: ${{ secrets.CADS_PAT }}
         path: cads-cim-api
 
@@ -61,6 +66,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-cim-ui
+        deployment_branch: ${{ inputs.deployment_branch }}
         token: ${{ secrets.CADS_PAT }}
         path: cads-cim-ui
 
@@ -70,7 +76,7 @@ jobs:
       with:
         context: cads-cim-api
         push: true
-        tags: ${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-api:latest # We always push the latest tag for the backend
+        tags: ${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-api:${{ github.event.inputs.image_tag }}
         file: cads-cim-api/Dockerfile
 
     - name: Build UI and push
@@ -79,6 +85,9 @@ jobs:
       with:
         context: cads-cim-ui
         push: true
+        # Arguments for using the cads-cim-api image in the cads-cim-ui build
+        build_args: |
+          --build-arg CIM_API_IMAGE=${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-api:${{ github.event.inputs.image_tag }}
         pull: true # We need to pull the backend image to build the frontend
         tags: ${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-ui:${{ github.event.inputs.image_tag }}
         file: cads-cim-ui/Dockerfile
