--- a/.github/workflows/build-cim.yml
+++ b/.github/workflows/build-cim.yml
@@ -86,8 +86,7 @@ jobs:
         context: cads-cim-ui
         push: true
         # Arguments for using the cads-cim-api image in the cads-cim-ui build
-        build_args: |
-          CIM_API_IMAGE=${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-api:${{ github.event.inputs.image_tag }}
+        build-args: CIM_API_IMAGE=${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-api:${{ github.event.inputs.image_tag }}
         pull: true # We need to pull the backend image to build the frontend
         tags: ${{ secrets.HARBOR_IP }}/cads/cads-backoffice-deployment/cads-cim-ui:${{ github.event.inputs.image_tag }}
         file: cads-cim-ui/Dockerfile
