--- a/.github/workflows/build-cim.yml
+++ b/.github/workflows/build-cim.yml
@@ -58,7 +58,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-cim-api
-        deployment_branch: ${{ inputs.deployment_branch }}
+        ref: ${{ inputs.deployment_branch }}
         token: ${{ secrets.CADS_PAT }}
         path: cads-cim-api
 
@@ -66,7 +66,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: ecmwf-projects/cads-cim-ui
-        deployment_branch: ${{ inputs.deployment_branch }}
+        ref: ${{ inputs.deployment_branch }}
         token: ${{ secrets.CADS_PAT }}
         path: cads-cim-ui
 
