add(build-images): trigger from workflow

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -17,6 +17,11 @@ on:
         description: 'Release tag'
         required: true
         default: 'test'
+  workflow_run:
+    workflows:
+      - ecmwf-projects/cads-deployment/release.yml
+      types: [requested]
+
 jobs:
 
   build_broker:
