--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -18,10 +18,19 @@ inputs:
 runs:
   using: 'composite'
   steps:
+
+    - name: Checkout cads-deployment repo
+      uses: actions/checkout@v3
+      with:
+        repository: ecmwf-projects/cads-deployment
+        ref: ${{ inputs.deployment_branch }}
+        token: ${{ secrets.CADS_PAT }}
+        path: .
+
     - name: Login to harbor registry
       uses: docker/login-action@v2
       with:
-        registry: "${{ secrets.HARBOR_IP }}"
+        registry: ${{ secrets.HARBOR_IP }}
         username: ${{ secrets.HARBOR_USER }}
         password: ${{ secrets.HARBOR_TOKEN }}
 
@@ -29,6 +38,7 @@ runs:
       shell: bash
       id: set_vars
       run: |
+        cd ./helmchart/worker-schedulers
         chartName=$(awk '/^name:/{print $2}' Chart.yaml)
         chartVersion=$(awk '/^version:/{print $2}' Chart.yaml)
 
@@ -44,4 +54,4 @@ runs:
         --entrypoint=sh \
         -v $(pwd)/${{ inputs.helmFolder }}:/work \
         -w /work alpine/helm \
-        -c "helm registry login ${{ inputs.registryUrl }} --username ${{ inputs.registryUsername }} --password ${{ inputs.registryPassword }} && helm package . && helm push /work/$ELM_CHART_NAME-ELM_CHART_VERSION.tgz oci.//${{ inputs.registryUrl }}/helm"
+        -c "helm registry login ${{ inputs.registryUrl }} --username ${{ inputs.registryUsername }} --password ${{ inputs.registryPassword }} && helm package . && helm push /work/$ELM_CHART_NAME-ELM_CHART_VERSION.tgz oci://${{ inputs.registryUrl }}/cads"
