--- a/.github/workflows/helm-worker-scheduler.yml
+++ b/.github/workflows/helm-worker-scheduler.yml
@@ -1,17 +1,21 @@
 name: Build worker-scheduler chart
 
-on: []
-
-
+on:
+  workflow_dispatch:
+    inputs:
+      deployment_branch:
+        description: 'Deployment branch'
+        required: true
+        default: 'main'
+    types: [requested]
 
 jobs:
   build_helm_chart:
-    name: Build helm chart:${{ inputs.image_tag }} from ${{ inputs.build_mode }}
+    name: Build helm chart
     uses: ecmwf-projects/cads-build-farm/.github/workflows/helm-chart.yaml@main
     with:
       helmFolder: helm_output
       build_mode: ${{ inputs.build_mode }}
-      image_tag: ${{ inputs.image_tag }}
       registryUrl: ${{ secrets.HARBOR_IP }}
       registryUsername: ${{ secrets.HARBOR_USER }}
       registryPassword: ${{ secrets.HARBOR_TOKEN }}
