--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -40,9 +40,9 @@ jobs:
       - name: Login to harbor registry
         uses: docker/login-action@v2
         with:
-          registryUrl: ${{ secrets.HARBOR_IP }}
-          registryUsername: ${{ secrets.HARBOR_USER }}
-          registryPassword: ${{ secrets.HARBOR_TOKEN }}
+          registry: ${{ secrets.HARBOR_IP }}
+          username: ${{ secrets.HARBOR_USER }}
+          password: ${{ secrets.HARBOR_TOKEN }}
 
       - name: Set Helm Chart Variables
         shell: bash
