--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -21,10 +21,10 @@ on:
       #   default: ""
       #   required: true
 
-# env:
-#     registryUrl: ${{ secrets.HARBOR_IP }}
-#     registryUsername: ${{ secrets.HARBOR_USER }}
-#     registryPassword: ${{ secrets.HARBOR_TOKEN }}
+env:
+    registryUrl: ${{ secrets.HARBOR_IP }}
+    registryUsername: ${{ secrets.HARBOR_USER }}
+    registryPassword: ${{ secrets.HARBOR_TOKEN }}
 
 jobs:
   building-helm-chart:
