--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -51,17 +51,17 @@ jobs:
           echo "HELM_CHART_VERSION=$chartVersion" >> $GITHUB_ENV
           echo output-folder=$output_folder >> $GITHUB_ENV
 
-      # - name: helm build and push
-      #   shell: bash
-      #   run: |
-      #     docker run \
-      #     --rm \
-      #     --entrypoint=sh \
-      #     -v $(pwd)/${{ steps.set_vars.outputs.output-folder }}:/work \
-      #     -w /work alpine/helm \
-      #     -c "helm registry login ${{ inputs.registryUrl }} --username ${{ inputs.registryUsername }} --password ${{ inputs.registryPassword }} && helm package . && helm push /work/$ELM_CHART_NAME-ELM_CHART_VERSION.tgz oci://${{ inputs.registryUrl }}/cads"
+      - name: helm build and push
+        shell: bash
+        run: |
+          docker run \
+          --rm \
+          --entrypoint=sh \
+          -v $(pwd)/${{ steps.set_vars.outputs.output-folder }}:/work \
+          -w /work alpine/helm \
+          -c "helm registry login ${{ inputs.registryUrl }} --username ${{ inputs.registryUsername }} --password ${{ inputs.registryPassword }} && helm package . && helm push /work/$ELM_CHART_NAME-ELM_CHART_VERSION.tgz oci://${{ inputs.registryUrl }}/cads"
 
-      # - name: cleanup
-      #   shell: bash
-      #   run: | 
-      #     rm -rf ${{ steps.set_vars.outputs.output-folder }}
+      - name: cleanup
+        shell: bash
+        run: | 
+          rm -rf ${{ steps.set_vars.outputs.output-folder }}
