fix push url for helm

--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -11,7 +11,7 @@ on:
 
 env:
     registryUrl: https://eccr.ecmwf.int/chartrepo/polytope
-    helmRegustryUrl: eccr.ecmwf.int/
+    helmRegustryUrl: eccr.ecmwf.int
     registryUsername: ${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME }}
     registryPassword: ${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN }}
 
