--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -60,7 +60,7 @@ jobs:
           --entrypoint=sh \
           -v $(pwd)/${{ steps.set_vars.outputs.output-folder }}:/work \
           -w /work alpine/helm \
-          -c "helm registry login https://${{ env.helmRegustryUrl }}/cads --username ${{ env.registryUsername }} --password ${{ env.registryPassword }}"
+          -c "helm registry login ${{ env.registryUrl }} --username ${{ env.registryUsername }} --password ${{ env.registryPassword }}"
 
       - name: cleanup
         shell: bash
