--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -60,7 +60,7 @@ jobs:
           --entrypoint=sh \
           -v $(pwd)/${{ steps.set_vars.outputs.output-folder }}:/work \
           -w /work alpine/helm \
-          -c "helm registry login ${{ env.registryUrl }} --username ${{ env.registryUsername }} --password ${{ env.registryPassword }}"
+          -c "helm registry login ${{ env.registryUrl }}/cads --username ${{ env.registryUsername }} --password ${{ env.registryPassword }} && helm package . && helm push /work/$ELM_CHART_NAME-ELM_CHART_VERSION.tgz oci://${{ env.helmRegustryUrl }}/cads"
 
       - name: cleanup
         shell: bash
