--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -64,7 +64,7 @@ jobs:
           -e REGISTRY_USERNAME=${{ env.registryUsername }} \
           -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
           alpine/helm \
-          -c "helm registry login $REGISTRY_URL/cads --username $REGISTRY_USERNAME}--password $REGISTRY_PASSWORD"
+          -c "echo \$REGISTRY_PASSWORD | helm registry login \$REGISTRY_URL/cads --username \$REGISTRY_USERNAME --password-stdin"
 
       - name: cleanup
         shell: bash
