--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -52,19 +52,27 @@ jobs:
           echo "HELM_CHART_VERSION=$chartVersion" >> $GITHUB_ENV
           echo output-folder=$output_folder >> $GITHUB_ENV
 
-      - name: helm build and push
+      - name: debug vars
         shell: bash
         run: |
-          docker run \
-          --rm \
-          --entrypoint=sh \
-          -v $(pwd)/${{ env.output_folder }}:/work \
-          -w /work \
-          -e REGISTRY_URL=${{ env.registryUrl }} \
-          -e REGISTRY_USERNAME=${{ env.registryUsername }} \
-          -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
-          alpine/helm \
-          -c "echo \$REGISTRY_PASSWORD | helm registry login \$REGISTRY_URL --username \$REGISTRY_USERNAME --password-stdin"
+          echo "User: ${{ env.registryUsername }}"
+          echo "URL:  ${{ env.registryUrl }}"
+          echo "Chart dir:"
+          ls -la ${{ env.output_folder }}
+
+      # - name: helm build and push
+      #   shell: bash
+      #   run: |
+      #     docker run \
+      #     --rm \
+      #     --entrypoint=sh \
+      #     -v $(pwd)/${{ env.output_folder }}:/work \
+      #     -w /work \
+      #     -e REGISTRY_URL=${{ env.registryUrl }} \
+      #     -e REGISTRY_USERNAME=${{ env.registryUsername }} \
+      #     -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
+      #     alpine/helm \
+      #     -c "echo \$REGISTRY_PASSWORD | helm registry login \$REGISTRY_URL --username \$REGISTRY_USERNAME --password-stdin"
 
       - name: cleanup
         shell: bash
