--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -52,8 +52,8 @@ jobs:
           echo "HELM_CHART_VERSION=$chartVersion" >> $GITHUB_ENV
           echo output-folder=$output_folder >> $GITHUB_ENV
 
-          echo "HELM_CHART_NAME
-          echo "HELM_CHART_VERSION
+          echo "HELM_CHART_NAME"
+          echo "HELM_CHART_VERSION"
 
       - name: helm build and push
         shell: bash
@@ -67,7 +67,7 @@ jobs:
           -e REGISTRY_USERNAME=${{ env.registryUsername }} \
           -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
           alpine/helm \
-          -c "helm package . && helm push /work/$HELM_CHART_NAME-$HELM_CHART_VERSION.tgz oci://$REGISTRY_URL/chartrepo"
+          -c "helm package . && helm push /work/$HELM_CHART_NAME-$HELM_CHART_VERSION.tgz oci://eccr.ecmwf.int/chartrepo"
           
       #-c "echo \$REGISTRY_PASSWORD | helm registry login \$REGISTRY_URL --username \$REGISTRY_USERNAME --password-stdin"
 
