--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -66,7 +66,7 @@ jobs:
           -e REGISTRY_URL=${{ env.registryUrl }} \
           -e REGISTRY_USERNAME=${{ env.registryUsername }} \
           -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
-          alpine/helm \
+          helm/helm:latest \
           -c "echo \$REGISTRY_PASSWORD | helm registry login eccr.ecmwf.int --username \$REGISTRY_USERNAME --password-stdin && \
               helm package . && \
               helm push \$HELM_CHART_NAME-\$HELM_CHART_VERSION.tgz oci://eccr.ecmwf.int/cads"
