--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -63,9 +63,8 @@ jobs:
           --entrypoint=sh \
           -v $(pwd)/${{ env.output_folder }}:/work \
           -w /work \
-          -e REGISTRY_URL=${{ env.registryUrl }} \
-          -e REGISTRY_USERNAME=${{ env.registryUsername }} \
-          -e REGISTRY_PASSWORD=${{ env.registryPassword }} \
+          -e REGISTRY_USERNAME=$${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME }}} \
+          -e REGISTRY_PASSWORD=${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN }} \
           alpine/helm:latest \
           -c "echo '$REGISTRY_PASSWORD' | helm registry login eccr.ecmwf.int --username '$REGISTRY_USERNAME' --password-stdin"
 
